 -- All but the last part of very Long lines from the network were
    discarded when for very long lines, only the first part should be
    saved.  Not a crashing bug.
 -- Server should not attempt to @clone Created and Modified attributes.
 -- Fix single-character case in pos(). It would never return success.
    Bug introduced in 2.6. It does not appear in 2.4.
 -- Change isdbref() to return '0' instead of '#-1 ISDBEF EXPECTS...'
 -- Fix ANSI overflow bug in ANSI_String_Copy() introduced by using an
    unsigned size_t in place of a signed 'int'. Bug introduced in 2.6.
 -- Add 'other half' of buffer overflow protection to a case in
    process_cmdent().  Without the other half, the first half causes a
    crash instead of prventing it.  Found and fixed by Sparks.
 -- Remove double evaluation from distribute() and sql().
 -- Save/Restore global registers while executing @descformat.
 -- Fix map(), filter(), and filterbool() to avoid evaluating the given
    attribute for an empty list.
 -- Strip ANSI from messages before matching messages against @filter
    and @infilter patterns.
 -- Zap trailing NL in help topics.
 -- Added help topic for HTML flag.
 -- When listening on multiple ports, continue to run the server as long
    as one of the requested ports is available.
 -- mix() doesn't include a function-invocation test (Issue 71).
 -- Examples in help topics show old-style 'say' (Issue 72).
 -- Attribute-level tracing does not report sortby() comparisons
    (Issue 73).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.

Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().